--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-
-
-    <!-- <meta name="viewport" width=device-width content="shrink-to-fit=0" initial-scale=1.0, maximum-scale=1.0, user-scalable=0> -->
-
+    <meta charset="utf-8">
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="libs/p5.min.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="Planet.js"></script>
     <script src="sketch.js"></script>
-    <script src="libs/p5.sound.min.js"></script>
 
   </head>
   <body>
-    <body style="overflow:hidden;">
-
-
-
   </body>
 </html>
