--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-<!--     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0> -->
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
     <script src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
   <body>
-     <body style="overflow:hidden;">
   </body>
 </html>
