--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
     <script src="sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
+    <script src="UI.js"></script>
+    
 
   </head>
   <body>
