--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="Planet.js"></script>
     <script src="sketch.js"></script>
     <script src="UI.js"></script>
-    
+    <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
   <body>
