--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
+    <script type="text/javascript">
+    window.addEventListener("load",function(){
+     setTimeout(scrollTo,0,0,1);
+     },false);
+    </script>
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
     <script src="sketch.js"></script>
