--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    
+
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
     <script src="sketch.js"></script>
     <script src="UI.js"></script>
+    <script src="p5.sound.min.js"></script>
     <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
