--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
-    <script src="sketch.js"></script>
+
     <script src="UI.js"></script>
     <script src="p5.sound.min.js"></script>
     <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
@@ -16,5 +16,8 @@
   </head>
   <body>
     <!-- <input type = "password/"> -->
+    <div style="width:500px height:500px">
+        <script src="sketch.js"></script>
+    </div>
   </body>
 </html>
