--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- <input type = "password/"> -->
-    <div style="width:500px height:500px">
+    <div style="width:500px height:500px margin:auto justify-content:center">
         <script src="sketch.js"></script>
     </div>
   </body>
