--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
-
+    <script src="sketch.js"></script>
     <script src="UI.js"></script>
     <script src="p5.sound.min.js"></script>
     <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
-  <body>
-    <!-- <input type = "password/"> -->
-    <div style="width:500px height:500px margin:auto justify-content:center">
-        <script src="sketch.js"></script>
+  <body style="width:500px height:500px margin:auto justify-content:center">
+    
+<!--     <div style="width:500px height:500px margin:auto justify-content:center"> -->
+
     </div>
   </body>
 </html>
