--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
-  <body style="width:500px height:500px margin:auto justify-content:center">
+  <body style="width:100% height:500px margin:auto justify-content:center">
     
 <!--     <div style="width:500px height:500px margin:auto justify-content:center"> -->
 
