--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <meta name="viewport" width=device-width, initial-scale=2.0, maximum-scale=2.0, user-scalable=0>
+    <style> body {padding: 0; margin: auto;} </style>
 
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
