--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
 
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
-    <script src="sketch.js"></script>
+    
     <script src="UI.js"></script>
     <script src="p5.sound.min.js"></script>
     <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
 
   </head>
-  <body style="display:flex width:100% height:500px margin:auto justify-content:center">
-    
-<!--     <div style="width:500px height:500px margin:auto justify-content:center"> -->
-
-    </div>
+  <body>
+    <script src="sketch.js"></script>
   </body>
 </html>
