--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=2.0, maximum-scale=2.0, user-scalable=0>
-    <style> body {padding: 0; margin: auto;} </style>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      width="device-width,"
+      initial-scale="2.0,"
+      maximum-scale="2.0,"
+      user-scalable="0"
+    />
 
     <script src="p5.min.js"></script>
     <script src="Planet.js"></script>
-    
+
     <script src="UI.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script language="javascript" type="text/javascript" src="p5.dom.min.js"></script>
-
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="p5.dom.min.js"
+    ></script>
   </head>
-  <body>
+  <body
+    style="
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    "
+  >
     <script src="sketch.js"></script>
   </body>
 </html>
